--- a/templates/home.html
+++ b/templates/home.html
@@ -57,7 +57,7 @@
   <div class="col-lg-4">
     <h2>UCLA Tau Beta Pi</h2>
     <h4>Announcements</h4>
-    <a href="http://bit.ly/TBPtutoring" class="btn btn-large btn-primary">The Tutoring Schedule is Up!</a>
+    <a href="{% url 'tutoring.views.schedule' %}" class="btn btn-large btn-primary">The Tutoring Schedule is Up!</a>
     <h4>Upcoming Events</h4> 
     {% for event in upcomingEvents %}
     <dl><a href="/events/{{ event.url }}">{{ event.name }}</a>
