--- a/templates/emcc.html
+++ b/templates/emcc.html
@@ -20,7 +20,7 @@
     We meet once a week at 2:30 PM on Thursdays at the Bruin Bear and take a short drive to Nora Sterry Elementary School. 
     In most cases, we are back at UCLA by 5:00 PM.
 
-    <p>To get involved, simply <a href="mailto:taubetapi@seas.ucla.edu">e-mail us</a> and indicate your interest, or contact the Education Outreach Chairs Albert Yen and Nick Ware
+    <p>To get involved, simply <a href="mailto:taubetapi@seas.ucla.edu">e-mail us</a> and indicate your interest, or contact the Education Outreach Chairs Albert Yen and Megan Weber.
 
     <h4>Benefits for You</h4>
 
