--- a/templates/base.html
+++ b/templates/base.html
@@ -70,6 +70,7 @@
               <li><a href="{% url 'main.views.candidates' %}">Candidates</a></li>
               <li><a href="{% url 'main.views.active_members' %}">Active Members</a></li>
               <li><a href="{% url 'main.views.tutoring_hours' %}">Tutoring Hours</a></li>
+              <li><a href="{% url 'main.views.tutoring_feedback' %}">Tutoring Feedback</a></li>
               <li><a href="{% url 'tutoring.views.preferences' %}">Tutoring Preferences</a></li>
               <li><a href="{% url 'main.views.downloads' %}">Downloads</a></li>
             </ul>
