--- a/templates/edit.html
+++ b/templates/edit.html
@@ -1,14 +1,9 @@
-{% extends "base.html" %}
+{% extends "profile_base.html" %}
 
 {% block title %}Edit Profile{% endblock %}
 
-{% block content %}
+{% block tabcontent %}
 
-<ul class="nav nav-tabs">
-  <li><a href="{% url 'main.views.profile_view' %}">Profile</a></li>
-  <li class="active"><a href="#">Edit</a></li>
-  <li><a href="{% url 'main.views.add' %}">Modify Classes</a></li>
-</ul>
 <div class="row">
   <div class="col-lg-6">
     {% if from_redirect %}
