Refactored edit form

--- a/templates/edit.html
+++ b/templates/edit.html
@@ -13,145 +13,12 @@
       {% csrf_token %}
       <fieldset>  
         <legend>Account Information</legend>
-        {% if error.incorrect_password %}
-        <div class="form-group has-error">
-          <label class="col-lg-4 control-label" for="inputError">Current Password</label>
-          <div class="col-lg-8">
-            <input type="password" class="form-control" name="current_password">
-            <span class="help-block">Incorrect password</span>
-        {% else %}
-        <div class="form-group">
-          <label class="col-lg-4 control-label">Current Password</label>
-          <div class="col-lg-8">
-            <input type="password" class="form-control" name="current_password">
-        {% endif %}
-            <span class="help-inline">Required if changing username or password</span>
-          </div>
-        </div>
-
-        {% if error.username_taken %}
-        <div class="form-group has-error">
-          <label class="col-lg-4 control-label" for="username">Username</label>
-          <div class="col-lg-8">
-            <input type="text" class="form-control" name="username" {% if user.get_username %}placeholder="{{ user.get_username }}"{% else %}required{% endif %}>
-            <span class="help-block">Username has already been taken</span>
-        {% else %}
-        <div class="form-group">
-          <label class="col-lg-4 control-label">Username</label>
-          <div class="col-lg-8">
-            <input type="text" class="form-control" name="username" {% if user.get_username %}placeholder="{{ user.get_username }}"{% else %}required{% endif %}>
-        {% endif %}
-          </div>
-        </div>
-
-        <div class="form-group">
-          <label class="col-lg-4 control-label">New Password</label>
-          <div class="col-lg-8">
-            <input type="password" class="form-control" name="new_password">
-          </div>
-        </div>
-
-        {% if error.non_matching_password %}
-        <div class="form-group has-error">
-          <label class="col-lg-4 control-label" for="confirm_password">Confirm Password</label>
-          <div class="col-lg-8">
-            <input type="password" class="form-control" name="confirm_password">
-            <span class="help-block">Passwords do not match</span>
-        {% else %}
-        <div class="form-group">
-          <label class="col-lg-4 control-label">Confirm Password</label>
-          <div class="col-lg-8">
-            <input type="password" class="form-control" name="confirm_password">
-        {% endif %}
-          </div>
-        </div>
+        {% include "form_snippet.html" with form=user_account_form %}
       </fieldset>
       <fieldset>
         <legend>Personal Information</legend>
-        <div class="form-group">
-          <label class="col-lg-4 control-label">Email</label>
-          <div class="col-lg-8">
-            <input type="email" class="form-control" name="email" {% if user.email %}placeholder="{{ user.email }}"{% else %}required{% endif %}>
-          </div>
-        </div>
-        <div class="form-group">
-          <label class="col-lg-4 control-label">First Name</label>
-          <div class="col-lg-8">
-            <input type="text" class="form-control" name="first_name" {% if user.first_name %}placeholder="{{ user.first_name }}"{% else %}required{% endif %}>
-          </div>
-        </div>
-        <div class="form-group">
-          <label class="col-lg-4 control-label">Middle Name</label>
-          <div class="col-lg-8">
-            <input type="text" class="form-control" name="middle_name" value="{{ profile.middle_name }}">
-          </div>
-        </div>
-        <div class="form-group">
-          <label class="col-lg-4 control-label">Last Name</label>
-          <div class="col-lg-8">
-            <input type="text" class="form-control" name="last_name" {% if user.last_name %}placeholder="{{ user.last_name }}"{% else %}required{% endif %}>
-          </div>
-        </div>
-        <div class="form-group">
-          <label class="col-lg-4 control-label">Nickname (optional)</label>
-          <div class="col-lg-8">
-            <input type="text" class="form-control" name="nickname" value="{{ profile.nickname }}">
-          </div>
-        </div>
-        <div class="form-group">
-          <label class="col-lg-4 control-label">Gender</label>
-          <div class="col-lg-8">
-            <label class="radio-inline">
-              <input type="radio" name="gender" value="M"{% if not profile.gender or profile.gender == 'M' %} checked{% endif %}>Male
-            </label>
-            <label class="radio-inline">
-              <input type="radio" name="gender" value="F"{% if profile.gender == 'F' %} checked{% endif %}>Female
-            </label>
-          </div>
-        </div>
-        {% if error.bad_birthday %}
-        <div class="form-group has-error">
-          <label class="col-lg-4 control-label">Birthday (format: 2012-12-21)</label>
-          <div class="col-lg-8">
-            <input type="date" class="form-control" name="birthday" {% if profile.birthday %}placeholder="{{ profile.birthday }}"{% else %}required{% endif %}>
-            <span class="help-block">Invalid date format, use YYYY-MM-DD</span>
-        {% else %}
-        <div class="form-group">
-          <label class="col-lg-4 control-label">Birthday (format: 2012-12-21)</label>
-          <div class="col-lg-8">
-            <input type="date" class="form-control" name="birthday" {% if profile.birthday %}placeholder="{{ profile.birthday }}"{% else %}required{% endif %}>
-        {% endif %}
-          </div>
-        </div>
-        <div class="form-group">
-          <label class="col-lg-4 control-label">Phone Number</label>
-          <div class="col-lg-8">
-            <input type="tel" class="form-control" name="phone_number" {% if profile.phone_number %}placeholder="{{ profile.phone_number }}"{% else %}required{% endif %}>
-          </div>
-        </div>
-        <div class="form-group">
-          <label class="col-lg-4 control-label">Major</label>
-          <div class="col-lg-8">
-            <select class="form-control" name="major">
-              {% for major in majors %}
-              <option{{ major.0 }}>{{ major.1 }}</option>
-              {% endfor %}
-            </select>
-          </div>
-        </div>
-        <div class="form-group">
-          <label class="col-lg-4 control-label">Graduation Term</label>
-          <div class="col-lg-4">
-            <select class="form-control" name="graduation_quarter">
-              {% for quarter in quarters %}
-              <option{{ quarter.0 }}>{{ quarter.1 }}</option>
-              {% endfor %}
-            </select>
-          </div>
-          <div class="col-lg-4">
-            <input type="text" class="form-control" name="graduation_year" {% if term.year %}placeholder="{{ term.year }}"{% else %}required{% endif %}>
-          </div>
-        </div>
+        {% include "form_snippet.html" with form=user_personal_form %}
+        {% include "form_snippet.html" with form=profile_form %}
       </fieldset>
       <fieldset>
         <legend>Documents</legend>
