--- a/templates/register.html
+++ b/templates/register.html
@@ -9,57 +9,7 @@
     <form class="form-horizontal" method="post" enctype="multipart/form-data">
       {% csrf_token %}
       <fieldset>  
-        {% if error.incorrect_password %}
-        <div class="form-group has-error">
-          <label class="col-lg-4 control-label" for="inputError">Registration Code</label>
-          <div class="col-lg-8">
-            <input type="password" class="form-control" name="registration_code">
-            <span class="help-block">Incorrect code</span>
-        {% else %}
-        <div class="form-group">
-          <label class="col-lg-4 control-label">Registration Code</label>
-          <div class="col-lg-8">
-            <input type="password" class="form-control" name="registration_code">
-        {% endif %}
-          </div>
-        </div>
-
-        {% if error.username_taken %}
-        <div class="form-group has-error">
-          <label class="col-lg-4 control-label" for="username">Username</label>
-          <div class="col-lg-8">
-            <input type="text" class="form-control" name="username" required>
-            <span class="help-block">Username has already been taken</span>
-        {% else %}
-        <div class="form-group">
-          <label class="col-lg-4 control-label">Username</label>
-          <div class="col-lg-8">
-            <input type="text" class="form-control" name="username" required>
-        {% endif %}
-          </div>
-        </div>
-
-        <div class="form-group">
-          <label class="col-lg-4 control-label">New Password</label>
-          <div class="col-lg-8">
-            <input type="password" class="form-control" name="new_password">
-          </div>
-        </div>
-
-        {% if error.non_matching_password %}
-        <div class="form-group has-error">
-          <label class="col-lg-4 control-label" for="confirm_password">Confirm Password</label>
-          <div class="col-lg-8">
-            <input type="password" class="form-control" name="confirm_password">
-            <span class="help-block">Passwords do not match</span>
-        {% else %}
-        <div class="form-group">
-          <label class="col-lg-4 control-label">Confirm Password</label>
-          <div class="col-lg-8">
-            <input type="password" class="form-control" name="confirm_password">
-        {% endif %}
-          </div>
-        </div>
+        {% include "form_snippet.html" %}
         <div class="form-actions">
           <button type="submit" class="btn btn-primary">Submit</button>
         </div>
