--- a/templates/login.html
+++ b/templates/login.html
@@ -1,15 +1,19 @@
-{% extends "base.html" %}
+{% extends "profile_base.html" %}
 
-{% block content %}
+{% block tabcontent %}
 
 <div class="row">
   <div class="col-lg-6">
+    {% if from_redirect %}
+    <p class="text-info">Please enter the following information</p>
+    {% endif %}
     <form class="form-horizontal" method="post" enctype="multipart/form-data">
       {% csrf_token %}
       <fieldset>  
         {% include "form_snippet.html" %}
+      </fieldset>
         <div class="form-actions">
-          <button type="submit" class="btn btn-primary">Submit</button>
+          <button type="submit" class="btn btn-primary">Login</button>
         </div>
       </fieldset>
     </form>
