--- a/templates/member_requirements.html
+++ b/templates/member_requirements.html
@@ -7,7 +7,7 @@
     <form class="form-horizontal" method="post" enctype="multipart/form-data">
       {% csrf_token %}
       <fieldset>
-        <legend>Candidate {{ term }}</legend>
+        <legend>Distinguished Active Member {{ term }}</legend>
         {% if tutoring_preferences_form %}
         {% include "form_snippet.html" with form=tutoring_preferences_form %}
         {% endif %}
