--- a/templates/member_requirements.html
+++ b/templates/member_requirements.html
@@ -8,10 +8,10 @@
       {% csrf_token %}
       <fieldset>
         <legend>Distinguished Active Member {{ term }}</legend>
+        {% include "form_snippet.html" with form=member_form %}
         {% if tutoring_preferences_form %}
         {% include "form_snippet.html" with form=tutoring_preferences_form %}
         {% endif %}
-        {% include "form_snippet.html" with form=candidate_form %}
         <div class="form-actions">
           <button type="submit" class="btn btn-primary">Submit</button>
         </div>
