--- a/templates/member_requirements.html
+++ b/templates/member_requirements.html
@@ -8,13 +8,15 @@
       {% csrf_token %}
       <fieldset>
         <legend>Distinguished Active Member {{ term }}</legend>
+        {% if member_form %}
         {% include "form_snippet.html" with form=member_form %}
-        {% if tutoring_preferences_form %}
         {% include "form_snippet.html" with form=tutoring_preferences_form %}
-        {% endif %}
         <div class="form-actions">
           <button type="submit" class="btn btn-primary">Submit</button>
         </div>
+        {% else %}
+        You are signed up for {{ requirement }}.
+        {% endif %}
       </fieldset>
     </form>
   </div>
