--- a/templates/member_requirements.html
+++ b/templates/member_requirements.html
@@ -10,6 +10,9 @@
         <legend>Distinguished Active Member {{ term }}</legend>
         {% if member_form %}
         {% include "form_snippet.html" with form=member_form %}
+        <div class="form-group">
+          <p class="help-block">Fill out the tutoring preferences below if you're signing up for tutoring.</p>
+        </div>
         {% include "form_snippet.html" with form=tutoring_preferences_form %}
         <div class="form-actions">
           <button type="submit" class="btn btn-primary">Submit</button>
