--- a/templates/all_candidate_requirements.html
+++ b/templates/all_candidate_requirements.html
@@ -35,7 +35,7 @@
       <td>{% if candidate.tutoring_complete %}<span class="glyphicon glyphicon-ok"></span>{% endif %}</td>
       <td>{% if candidate.engineering_futures %}<span class="glyphicon glyphicon-ok"></span>{% endif %}</td>
       <td>{% if candidate.resume %}<span class="glyphicon glyphicon-ok"></span>{% endif %}</td>
-      <td>{% if candidate.professor_interview %}<span class="glyphicon glyphicon-ok"></span>{% endif %}</td>
+      <td>{% if candidate.professor_interview %}<a href="{% url 'main.views.interview' candidate.id %}"><span class="glyphicon glyphicon-ok"></span></a>{% endif %}</td>
     </tr>
     {% endfor %}
   </tbody>
