--- a/templates/base.html
+++ b/templates/base.html
@@ -69,6 +69,7 @@
             <ul class="dropdown-menu">
               <li><a href="{% url 'main.views.candidates' %}">Candidates</a></li>
               <li><a href="{% url 'main.views.active_members' %}">Active Members</a></li>
+              <li><a href="{% url 'main.views.pending_community_service' %}">Pending Community Service</a></li>
               <li><a href="{% url 'main.views.tutoring_hours' %}">Tutoring Hours</a></li>
               <li><a href="{% url 'main.views.tutoring_feedback' %}">Tutoring Feedback</a></li>
               <li><a href="{% url 'main.views.downloads' %}">Downloads</a></li>
