--- a/templates/all_candidate_requirements.html
+++ b/templates/all_candidate_requirements.html
@@ -26,10 +26,10 @@
     <tr>
       <td>{{ candidate }}</td>
       <td>{% if candidate.bent_polish %}<span class="glyphicon glyphicon-ok"></span>{% endif %}</td>
-      <td>{% if candidate.candidate_quiz_complete %}<span class="glyphicon glyphicon-ok"></span>{% endif %}</td>
+      <td>{% if candidate.candidate_quiz %}<span class="glyphicon glyphicon-ok"></span>{% endif %}</td>
       <td>{% if candidate.candidate_meet_and_greet %}<span class="glyphicon glyphicon-ok"></span>{% endif %}</td>
       <td>{% if candidate.social_complete %}<span class="glyphicon glyphicon-ok"></span>{% endif %}</td>
-      <td>{% if candidate.signature_book_complete %}<span class="glyphicon glyphicon-ok"></span>{% endif %}</td>
+      <td>{% if candidate.signature_book %}<span class="glyphicon glyphicon-ok"></span>{% endif %}</td>
       <td>{% if candidate.community_service_complete %}<span class="glyphicon glyphicon-ok"></span>{% endif %}</td>
       <td>{% if candidate.initation_fee %}<span class="glyphicon glyphicon-ok"></span>{% endif %}</td>
       <td>{% if candidate.tutoring_complete %}<span class="glyphicon glyphicon-ok"></span>{% endif %}</td>
