--- a/templates/account.html
+++ b/templates/account.html
@@ -7,7 +7,7 @@
     <form class="form-horizontal" method="post" enctype="multipart/form-data">
       {% csrf_token %}
       <fieldset>  
-        <legend>Register TBP Account</legend>
+        <legend>Change Username/Password</legend>
         {% include "form_snippet.html" %}
         <div class="form-actions">
           <button type="submit" class="btn btn-primary">Submit</button>
