--- a/templates/edit.html
+++ b/templates/edit.html
@@ -12,16 +12,13 @@
     <form class="form-horizontal" method="post" enctype="multipart/form-data">
       {% csrf_token %}
       <fieldset>  
-        <legend>Account Information</legend>
-        {% include "form_snippet.html" with form=user_account_form %}
-      </fieldset>
-      <fieldset>
-        <legend>Personal Information</legend>
+        <div class="form-group">
+          <div class="col-lg-8 col-lg-offset-4">
+            <p class="form-control-static"><a href="{% url 'main.views.account' %}">Change your username/password</a></p>
+          </div>
+        </div>
         {% include "form_snippet.html" with form=user_personal_form %}
         {% include "form_snippet.html" with form=profile_form %}
-      </fieldset>
-      <fieldset>
-        <legend>Documents</legend>
         <div class="form-group">
           {% if error.file_type %}
           <p class="text-danger">{% for file_type in error.file_type %}{% if not forloop.last %}{{ file_type }}, {% else %}{{ file_type }}{% endif %}{% endfor %} have one of these errors:
@@ -41,8 +38,6 @@
             <input type="file" name="resume_pdf">
           </div>
         </div>
-      </fieldset>
-      <fieldset>
         <div class="form-actions">
           <button type="submit" class="btn btn-primary">Submit</button>
         </div>
