--- a/templates/profile.html
+++ b/templates/profile.html
@@ -9,66 +9,14 @@
     <form class="form-horizontal">
       <fieldset>
         <legend>Personal Information</legend>
+        {% for field in fields %}
         <div class="form-group">
-          <label class="col-lg-4 control-label">Email</label>
+          <label class="col-lg-4 control-label">{{ field.0 }}</label>
           <div class="col-lg-8">
-            <p class="form-control-static">{{ user.email }}</p>
+            <p class="form-control-static">{{ field.1 }}</p>
           </div>
         </div>
-        <div class="form-group">
-          <label class="col-lg-4 control-label">First Name</label>
-          <div class="col-lg-8">
-            <p class="form-control-static">{{ user.first_name }}</p>
-          </div>
-        </div>
-        <div class="form-group">
-          <label class="col-lg-4 control-label">Middle Name</label>
-          <div class="col-lg-8">
-            <p class="form-control-static">{{ profile.middle_name }}</p>
-          </div>
-        </div>
-        <div class="form-group">
-          <label class="col-lg-4 control-label">Last Name</label>
-          <div class="col-lg-8">
-            <p class="form-control-static">{{ user.last_name }}</p>
-          </div>
-        </div>
-        <div class="form-group">
-          <label class="col-lg-4 control-label">Nickname</label>
-          <div class="col-lg-8">
-            <p class="form-control-static">{{ profile.nickname }}</p>
-          </div>
-        </div>
-        <div class="form-group">
-          <label class="col-lg-4 control-label">Gender</label>
-          <div class="col-lg-8">
-            <p class="form-control-static">{{ profile.get_gender_display }}</p>
-          </div>
-        </div>
-        <div class="form-group">
-          <label class="col-lg-4 control-label">Birthday</label>
-          <div class="col-lg-8">
-            <p class="form-control-static">{{ profile.birthday }}</p>
-          </div>
-        </div>
-        <div class="form-group">
-          <label class="col-lg-4 control-label">Phone Number</label>
-          <div class="col-lg-8">
-            <p class="form-control-static">{{ profile.phone_number }}</p>
-          </div>
-        </div>
-        <div class="form-group">
-          <label class="col-lg-4 control-label">Major</label>
-          <div class="col-lg-8">
-            <p class="form-control-static">{{ profile.get_major_display }}</p>
-          </div>
-        </div>
-        <div class="form-group">
-          <label class="col-lg-4 control-label">Graduation Term</label>
-          <div class="col-lg-8">
-            <p class="form-control-static">{{ profile.graduation_term }}</p>
-          </div>
-        </div>
+        {% endfor %}
         <div class="form-group">
           <label class="col-lg-4 control-label">Classes</label>
           <div class="col-lg-8">
