--- a/templates/candidate_requirements.html
+++ b/templates/candidate_requirements.html
@@ -9,6 +9,7 @@
       <fieldset>
         <legend>Candidate {{ term }}</legend>
         {% include "form_snippet.html" %}
+        {% include "form_snippet.html" with form=shirt_form %}
         <div class="form-actions">
           <button type="submit" class="btn btn-primary">Submit</button>
         </div>
