--- a/templates/profile.html
+++ b/templates/profile.html
@@ -49,7 +49,7 @@
         </div>
       </fieldset>
     </form>
-  </ul>
+  </div>
 </div>
 <div class="col-lg-6">
   <h4>{{ profile.get_position_display }}</h4>
