--- a/templates/events.html
+++ b/templates/events.html
@@ -39,7 +39,7 @@
 
   </div>
   <div class="col-lg-4">
-    <img src="/static/img/events_main.jpg" width="100%"></img>
+    <img src="/static/img/events_main.jpg" width="100%">
   </div>
 </div>
 {% endblock %}
