Added resume zip link

--- a/templates/downloads.html
+++ b/templates/downloads.html
@@ -3,4 +3,6 @@
 
 {% block content %}
 <a href="{% url 'main.views.spreadsheet' %}">Spreadsheet</a>
+<a href="{% url 'main.views.resumes_pdf' %}">Resumes (PDF)</a>
+<a href="{% url 'main.views.resumes_word' %}">Resumes (word)</a>
 {% endblock %}
