Added hyperlink to Facebook

--- a/templates/about.html
+++ b/templates/about.html
@@ -22,7 +22,7 @@
 
 <h4>Contact Us</h4>
 
-<p>Have Facebook? "Like" us on Facebook here to stay informed on all the club activities!
+<p>Have Facebook? "Like" us on <a href="https://www.facebook.com/tbp.epsilon.ucla">Facebook here</a> to stay informed on all the club activities!
 
 <p>For any questions, comments, or concerns, please contact us at 
 <a href="mailto:taubetapi@seas.ucla.edu">taubetapi@seas.ucla.edu</a>.
