--- a/templates/home.html
+++ b/templates/home.html
@@ -1,89 +1,91 @@
 {% extends "base.html" %}
 
 {% block content %}
-<style>
-  .carousel-caption
-  {
-    padding-bottom:30px;
-  }
-</style>
-<div class="row">
-  <div class="col-xs-12 col-md-8">
-    <div id="carousel" class="carousel">
-      <!-- Indicators -->
-      <ol class="carousel-indicators">
-        <li data-target="#carousel" data-slide-to="0" class="active"></li>
-        <li data-target="#carousel" data-slide-to="1"></li>
-        <li data-target="#carousel" data-slide-to="2"></li>
-      </ol>
+  <style>
+    .carousel-caption
+    {
+      padding-bottom:30px;
+    }
+  </style>
+  <div class="row">
+    <div class="col-xs-12 col-md-8">
+      <div id="carousel" class="carousel">
+        <!-- Indicators -->
+        <ol class="carousel-indicators">
+          <li data-target="#carousel" data-slide-to="0" class="active"></li>
+          <li data-target="#carousel" data-slide-to="1"></li>
+          <li data-target="#carousel" data-slide-to="2"></li>
+        </ol>
 
-      <!-- Wrapper for slides -->
-      <div class="carousel-inner">
-        <div class="item active">
-          <a href="{% url 'web.views.about' %}">
-            <img src="/static/img/about.jpg" alt="" />
-          </a>
-          <div class="carousel-caption">
-            <a href="{% url 'web.views.about' %}" style="color:white"><h4>About Us</h4></a>
+        <!-- Wrapper for slides -->
+        <div class="carousel-inner">
+          <div class="item active">
+            <a href="{% url 'web.views.about' %}">
+              <img src="/static/img/about.jpg" alt="" />
+            </a>
+            <div class="carousel-caption">
+              <a href="{% url 'web.views.about' %}" style="color:white"><h4>About Us</h4></a>
+            </div>
+          </div>
+          <div class="item">
+            <a href="{% url 'web.views.tutoring' %}">
+              <img src="/static/img/tutoring.jpg" alt="" />
+            </a>
+            <div class="carousel-caption">
+              <a href="{% url 'web.views.tutoring' %}" style="color:white"><h4>Tutoring</h4></a>
+            </div>
+          </div>
+          <div class="item">
+            <a href="{% url 'event.views.events' %}">
+              <img src="/static/img/events.jpg" alt="" />
+            </a>
+            <div class="carousel-caption">
+              <a href="{% url 'event.views.events' %}" style="color:white"><h4>Events</h4></a>
+            </div>
           </div>
         </div>
-        <div class="item">
-          <a href="{% url 'web.views.tutoring' %}">
-            <img src="/static/img/tutoring.jpg" alt="" />
-          </a>
-          <div class="carousel-caption">
-            <a href="{% url 'web.views.tutoring' %}" style="color:white"><h4>Tutoring</h4></a>
-          </div>
-        </div>
-        <div class="item">
-          <a href="{% url 'event.views.events' %}">
-            <img src="/static/img/events.jpg" alt="" />
-          </a>
-          <div class="carousel-caption">
-            <a href="{% url 'event.views.events' %}" style="color:white"><h4>Events</h4></a>
-          </div>
-        </div>
+
+        <!-- Controls -->
+        <a class="left carousel-control" href="#carousel" data-slide="prev">
+          <span class="icon-prev"></span>
+        </a>
+        <a class="right carousel-control" href="#carousel" data-slide="next">
+          <span class="icon-next"></span>
+        </a>
       </div>
-
-      <!-- Controls -->
-      <a class="left carousel-control" href="#carousel" data-slide="prev">
-        <span class="icon-prev"></span>
-      </a>
-      <a class="right carousel-control" href="#carousel" data-slide="next">
-        <span class="icon-next"></span>
-      </a>
+    </div>
+    <div class="col-md-4 visible-md visible-lg">
+      <h2>UCLA Tau Beta Pi</h2>
+      <h4>Announcements</h4>
+      <a href="{% url 'tutoring.views.schedule' %}" class="btn btn-large btn-primary">The Tutoring Schedule is Up!</a>
+      <h4>Upcoming Events</h4>
+      {% for event in upcomingEvents %}
+        <dl>
+          <dd><a href="/events/{{ event.url }}">{{ event.name }}</a></dd>
+          <dd>{{ event.location }}</dd>
+          <dd>{{ event.get_date }}</dd>
+          <dd>{{ event.get_time }}</dd>
+        </dl>
+      {% endfor %}
+      {% include "house_points_snippet.html" %}
     </div>
   </div>
-  <div class="col-md-4 visible-md visible-lg">
-    <h2>UCLA Tau Beta Pi</h2>
-    <h4>Announcements</h4>
-    <a href="{% url 'tutoring.views.schedule' %}" class="btn btn-large btn-primary">The Tutoring Schedule is Up!</a>
-    <h4>Upcoming Events</h4> 
-    {% for event in upcomingEvents %}
-    <dl>
-      <dd><a href="/events/{{ event.url }}">{{ event.name }}</a></dd>
-      <dd>{{ event.location }}</dd>
-      <dd>{{ event.get_date }}</dd>
-      <dd>{{ event.get_time }}</dd>
-    </dl>
-    {% endfor %}
+  <div class="row">
+    <div class="col-xs-12 visible-xs visible-sm">
+      <h2>UCLA Tau Beta Pi</h2>
+      <h4>Announcements</h4>
+      <a href="{% url 'tutoring.views.schedule' %}" class="btn btn-large btn-primary">The Tutoring Schedule is Up!</a>
+      <h4>Upcoming Events</h4>
+      {% for event in upcomingEvents %}
+        <dl>
+          <dd><a href="/events/{{ event.url }}">{{ event.name }}</a></dd>
+          <dd>{{ event.location }}</dd>
+          <dd>{{ event.get_date }}</dd>
+          <dd>{{ event.get_time }}</dd>
+        </dl>
+      {% endfor %}
+      {% include "house_points_snippet.html" %}
+    </div>
   </div>
-</div>
-<div class="row">
-  <div class="col-xs-12 visible-xs visible-sm">
-    <h2>UCLA Tau Beta Pi</h2>
-    <h4>Announcements</h4>
-    <a href="{% url 'tutoring.views.schedule' %}" class="btn btn-large btn-primary">The Tutoring Schedule is Up!</a>
-    <h4>Upcoming Events</h4> 
-    {% for event in upcomingEvents %}
-    <dl>
-      <dd><a href="/events/{{ event.url }}">{{ event.name }}</a></dd>
-      <dd>{{ event.location }}</dd>
-      <dd>{{ event.get_date }}</dd>
-      <dd>{{ event.get_time }}</dd>
-    </dl>
-    {% endfor %}
-  </div>
-</div>
 
 {% endblock %}
