--- a/templates/houses.html
+++ b/templates/houses.html
@@ -11,7 +11,7 @@
 <h4>Ways to Earn House Points:</h4>
 
 <ul>
-  <li>First three houses to turn in Professor Interview/Resume (1st: 25, 2nd: 10, 3rd: 5)</li>
+  <li>Coming soon</li>
   <li>Best candidate signature book (1st: 25, 2nd: 10, 3rd: 5)</li>
   <li>Best candidate quiz score (1st: 25, 2nd: 10, 3rd: 5)</li>
   <li>Attending info-sessions (5 per event)</li>
@@ -21,65 +21,6 @@
   <li>Win games at social events (1st: 25, 2nd: 10, 3rd: 5)</li>
 </ul>
 
-<table class="table table-striped">
-  <th></th>
-  {% for house in houses %}
-  <th>{{ house }}</th>
-  {% endfor %}
-  <tr>
-    <td>Resume</td>
-    {% for house in houses %}
-    <td>{{ house.resume_points }}</td>
-    {% endfor %}
-  </tr>
-  <tr>
-    <td>Professor Interview</td>
-    {% for house in houses %}
-    <td>{{ house.professor_interview_points }}</td>
-    {% endfor %}
-  </tr>
-  <tr>
-    <td>Signature Book</td>
-    {% for house in houses %}
-    <td>{{ house.signature_book_points }}</td>
-    {% endfor %}
-  </tr>
-  <tr>
-    <td>Candidate Quiz</td>
-    {% for house in houses %}
-    <td>{{ house.candidate_quiz_points }}</td>
-    {% endfor %}
-  </tr>
-  <tr>
-    <td>Social</td>
-    {% for house in houses %}
-    <td>{{ house.social }}</td>
-    {% endfor %}
-  </tr>
-  <tr>
-    <td>Tutoring</td>
-    {% for house in houses %}
-    <td>{{ house.tutoring }}</td>
-    {% endfor %}
-  </tr>
-  <tr>
-    <td>Community Service</td>
-    {% for house in houses %}
-    <td>{{ house.community_service }}</td>
-    {% endfor %}
-  </tr>
-  <tr>
-    <td>Other</td>
-    {% for house in houses %}
-    <td>{{ house.other_points }}</td>
-    {% endfor %}
-  </tr>
-  <tr>
-    <td>Total</td>
-    {% for house in houses %}
-    <td>{{ house.points }}</td>
-    {% endfor %}
-  </tr>
-</table>
+{% include "house_points_snippet.html" %}
 
 {% endblock %}
