Can't have multiple captions in a table

--- a/templates/houses.html
+++ b/templates/houses.html
@@ -43,6 +43,8 @@
       <td><b>Total:</b></td>
       <td><b>40 points</b></td>
     </tr>
+  </table>
+  <table class="table">
     <caption><b>Extra stuff/ways to make up points</b></caption>
     <tr>
       <td>Extra tutoring (max 2 hours per week)</td>
@@ -68,6 +70,8 @@
       <td>80%-89%  on membership quiz</td>
       <td>5 points</td>
     </tr>
+  </table>
+  <table class="table">
     <caption><b>Social events</b></caption>
     <tr>
       <td>If 100% members of house attend an event/social</td>
@@ -81,6 +85,8 @@
       <td>If 50%+ members of house attend an event/social</td>
       <td>1 points/attendee</td>
     </tr>
+  </table>
+  <table class="table">
     <caption><b>Interviews and Resumes</b></caption>
     <tr>
       <td>1st house to turn in all interviews and resumes</td>
@@ -94,7 +100,9 @@
       <td>3rd house to turn in all interviews and resumes</td>
       <td>2 points/person</td>
     </tr>
-    <caption><b>Completing the Initiation Process</b></caption>
+  </table>
+  <h5>Distinguished Active Points</h5>
+  <table class="table">
     <tr>
       <td>Tutoring at your scheduled hours (7 weeks) – no points for makeup</td>
       <td>2 points/wk</td>
