Fixed house points spacing

--- a/templates/houses.html
+++ b/templates/houses.html
@@ -10,7 +10,10 @@
 
   <h4>Ways to Earn House Points:</h4>
   <table class="table">
-    <caption><b>Completing the Initiation Process</b></caption>
+    <tr>
+      <th>Completing the Initiation Process</th>
+      <th>&nbsp</th>
+    </tr>
     <tr>
       <td>Tutoring at your scheduled hours (7 weeks) – no points for makeup</td>
       <td>2 points/wk</td>
@@ -43,9 +46,10 @@
       <td><b>Total:</b></td>
       <td><b>40 points</b></td>
     </tr>
-  </table>
-  <table class="table">
-    <caption><b>Extra stuff/ways to make up points</b></caption>
+    <tr>
+      <th><br>Extra Stuff/Ways To Make Up Points</th>
+      <th>&nbsp</th>
+    </tr>
     <tr>
       <td>Extra tutoring (max 2 hours per week)</td>
       <td>5 points/hr</td>
@@ -70,9 +74,10 @@
       <td>80%-89%  on membership quiz</td>
       <td>5 points</td>
     </tr>
-  </table>
-  <table class="table">
-    <caption><b>Social events</b></caption>
+    <tr>
+      <th><br>Social Events</th>
+      <th>&nbsp</th>
+    </tr>
     <tr>
       <td>If 100% members of house attend an event/social</td>
       <td>3 points/attendee</td>
@@ -85,9 +90,10 @@
       <td>If 50%+ members of house attend an event/social</td>
       <td>1 points/attendee</td>
     </tr>
-  </table>
-  <table class="table">
-    <caption><b>Interviews and Resumes</b></caption>
+    <tr>
+      <th><br>Interviews and Resumes</th>
+      <th>&nbsp</th>
+    </tr>
     <tr>
       <td>1st house to turn in all interviews and resumes</td>
       <td>6 points/person</td>
@@ -100,9 +106,10 @@
       <td>3rd house to turn in all interviews and resumes</td>
       <td>2 points/person</td>
     </tr>
-  </table>
-  <h5>Distinguished Active Points</h5>
-  <table class="table">
+    <tr>
+      <th><br>Distinguished Active Points</th>
+      <th>&nbsp</th>
+    </tr>
     <tr>
       <td>Tutoring at your scheduled hours (7 weeks) – no points for makeup</td>
       <td>2 points/wk</td>
