--- a/templates/first_edit.html
+++ b/templates/first_edit.html
@@ -1,21 +1,19 @@
-{% extends "profile_base.html" %}
+{% extends "base.html" %}
 
 {% block title %}Edit Profile{% endblock %}
 
-{% block tabcontent %}
+{% block content %}
 
 <div class="row">
   <div class="col-lg-6">
+    <p class="text-info">Please enter the following information</p>
     <form class="form-horizontal" method="post" enctype="multipart/form-data">
       {% csrf_token %}
       <fieldset>  
-        <div class="form-group">
-          <div class="col-lg-8 col-lg-offset-4">
-            <p class="form-control-static"><a href="{% url 'main.views.account' %}">Change your username/password</a></p>
-          </div>
-        </div>
         {% include "form_snippet.html" with form=user_personal_form %}
         {% include "form_snippet.html" with form=profile_form %}
+        {% include "form_snippet.html" %}
+        {% include "form_snippet.html" with form=shirt_form %}
         <div class="form-actions">
           <button type="submit" class="btn btn-primary">Submit</button>
         </div>
