Added registration blurbs

--- a/templates/first_edit.html
+++ b/templates/first_edit.html
@@ -6,7 +6,9 @@
 
 <div class="row">
   <div class="col-lg-6">
-    <p class="text-info">Please enter the following information</p>
+    <p>This form will help us collect the information needed to help you start the initiation process.
+      You will also submit your preferred tutoring hours and classes here.
+      Completion of this form will confirm your intent to initiate into Tau Beta Pi.</p>
     <form class="form-horizontal" method="post" enctype="multipart/form-data">
       {% csrf_token %}
       <fieldset>  
