--- a/templates/register.html
+++ b/templates/register.html
@@ -4,6 +4,7 @@
 
 <div class="row">
   <div class="col-lg-6">
+    <p>Hello! We're excited that you'll be initiating into the Tau Beta Pi, California Epsilon Chapter this quarter.
     <form class="form-horizontal" method="post" enctype="multipart/form-data">
       {% csrf_token %}
       <fieldset>  
