--- a/templates/first_edit.html
+++ b/templates/first_edit.html
@@ -6,16 +6,19 @@
 
 <div class="row">
   <div class="col-lg-6">
-    <p>This form will help us collect the information needed to help you start the initiation process.
-      You will also submit your preferred tutoring hours and classes here.
-      Completion of this form will confirm your intent to initiate into Tau Beta Pi.</p>
     <form class="form-horizontal" method="post" enctype="multipart/form-data">
       {% csrf_token %}
-      <fieldset>  
+      <fieldset>
+        <p class="help-block">This form will help us collect the information needed to help you start the initiation process.
+          You will also submit your preferred tutoring hours here.
+          Completion of this form will confirm your intent to initiate into Tau Beta Pi.</p>
         {% include "form_snippet.html" with form=user_personal_form %}
         {% include "form_snippet.html" with form=profile_form %}
-        {% include "form_snippet.html" %}
         {% include "form_snippet.html" with form=shirt_form %}
+      </fieldset>
+      <fieldset>
+        <legend>Tutoring Hour Preferences</legend>
+        {% include "form_snippet.html" %}
         <div class="form-actions">
           <button type="submit" class="btn btn-primary">Submit</button>
         </div>
