Renamed tutoring form

--- a/templates/first_edit.html
+++ b/templates/first_edit.html
@@ -18,7 +18,7 @@
       </fieldset>
       <fieldset>
         <legend>Tutoring Hour Preferences</legend>
-        {% include "form_snippet.html" %}
+        {% include "form_snippet.html" with form=tutoring_form %}
         <div class="form-actions">
           <button type="submit" class="btn btn-primary">Submit</button>
         </div>
