--- a/templates/first_edit.html
+++ b/templates/first_edit.html
@@ -19,6 +19,7 @@
       <fieldset>
         <legend>Tutoring Hour Preferences</legend>
         {% include "form_snippet.html" with form=tutoring_form %}
+        <p class="help-block">If you have any extenuating circumstances and cannot tutor during any of the options listed, please email <a href="mailto:webmaster@tbp.seas.ucla.edu">webmaster@tbp.seas.ucla.edu</a>.</p>
         <div class="form-actions">
           <button type="submit" class="btn btn-primary">Submit</button>
         </div>
