--- a/templates/add.html
+++ b/templates/add.html
@@ -10,14 +10,88 @@
       {% csrf_token %}
       <legend>Add Classes</legend>
       <p class="help-block">Please email <a href="mailto:webmaster@tbp.seas.ucla.edu">webmaster@tbp.seas.ucla.edu</a> if there are any classes that you can tutor and the department isn't listed.</p>
-      <select name="dept">
-        {% for dept in departments %}
-        <option value="{{ dept }}">{{ dept }}</option>
-        {% endfor %}
-      </select>
-      <input type="text" name="cnum" required>
-      <p class="help-block">Tip: You can add multiple classes at once (e.g: 31,32,33).</p>
-      <button type="submit" class="btn btn-default">Add</button>
+      <fieldset>
+        <div class="form-group">
+          <select name="dept" class="form-control">{% for dept in departments %}
+            <option value="{{ dept }}">{{ dept }}</option>{% endfor %}
+          </select>
+        </div>
+        <div class="form-group">
+          <input type="text" class="form-control" name="cnum" required>
+        </div>
+        <button type="submit" class="btn btn-default">Add</button>
+      </fieldset>
+      <p class="help-block">Tip: You can add multiple classes at once.</p>
+      <p class="help-block">Examples:</p>
+      <fieldset>
+        <div class="form-group">
+          <select name="dept" class="form-control">
+            <option value="BE">BE</option>
+            <option value="CEE">CEE</option>
+            <option value="CHEM">CHEM</option>
+            <option value="CHEME">CHEME</option>
+            <option value="CS">CS</option>
+            <option value="EE">EE</option>
+            <option value="ENGR">ENGR</option>
+            <option value="LS">LS</option>
+            <option value="MAE">MAE</option>
+            <option value="MATH" selected="selected">MATH</option>
+            <option value="MGMT">MGMT</option>
+            <option value="MSE">MSE</option>
+            <option value="PHYSICS">PHYSICS</option>
+            <option value="STATS">STATS</option>
+          </select>
+        </div>
+        <div class="form-group">
+          <input type="text" class="form-control" value="31A,31B,32A,32B,33A,33B">
+        </div>
+      </fieldset>
+      <fieldset>
+        <div class="form-group">
+          <select name="dept" class="form-control">
+            <option value="BE">BE</option>
+            <option value="CEE">CEE</option>
+            <option value="CHEM">CHEM</option>
+            <option value="CHEME">CHEME</option>
+            <option value="CS">CS</option>
+            <option value="EE">EE</option>
+            <option value="ENGR">ENGR</option>
+            <option value="LS">LS</option>
+            <option value="MAE">MAE</option>
+            <option value="MATH">MATH</option>
+            <option value="MGMT">MGMT</option>
+            <option value="MSE">MSE</option>
+            <option value="PHYSICS" selected="selected">PHYSICS</option>
+            <option value="STATS">STATS</option>
+          </select>
+        </div>
+        <div class="form-group">
+          <input type="text" class="form-control" value="1A,1B,1C">
+        </div>
+      </fieldset>
+      <fieldset>
+        <div class="form-group">
+          <select name="dept" class="form-control">
+            <option value="BE">BE</option>
+            <option value="CEE">CEE</option>
+            <option value="CHEM">CHEM</option>
+            <option value="CHEME">CHEME</option>
+            <option value="CS" selected="selected">CS</option>
+            <option value="EE">EE</option>
+            <option value="ENGR">ENGR</option>
+            <option value="LS">LS</option>
+            <option value="MAE">MAE</option>
+            <option value="MATH">MATH</option>
+            <option value="MGMT">MGMT</option>
+            <option value="MSE">MSE</option>
+            <option value="PHYSICS">PHYSICS</option>
+            <option value="STATS">STATS</option>
+          </select>
+        </div>
+        <div class="form-group">
+          <input type="text" class="form-control" value="31,32,33">
+        </div>
+      </fieldset>
     </form>
     <form class="form" method="post" enctype="multipart/form-data">
       {% csrf_token %}
