--- a/templates/schedule.html
+++ b/templates/schedule.html
@@ -3,62 +3,64 @@
 {% block title %}TBP {{ term }} Tutoring Schedule{% endblock %}
 
 {% block content %}
-
-<script src="/static/js/application.js" type="text/javascript"></script>
-<script src="/static/js/tutor.js" type="text/javascript"></script><style></style>
-<h1>TBP {{ term }} Tutoring Schedule</h1>
-<div class="row">
-  <div class="col-lg-3">
-    <div class="panel-group" id="accordion">
-      {% for item in classes %}
-      <div class="panel panel-default">
-        <div class="panel-heading">
-          <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion" href="#{{ item.2 }}">
-            {{ item.0 }}
-          </a>
-        </div>
-        <div id="{{ item.2 }}" class="panel-collapse collapse">
-          <div class="panel-body">
-            {% for class in item.1 %}
-            <a href="#" class="{{ class.1 }}" onmouseover="highlight('{{ class.1 }}')" onmouseout="unhighlight('{{ class.1 }}')" onclick="return locklight('{{ class.1 }}')">{{ class.0 }}</a>{% if not forloop.last %},{% endif %}
-            {% endfor %}
-          </div>
+  <script src="/static/js/application.js" type="text/javascript"></script>
+  <script src="/static/js/tutor.js" type="text/javascript"></script><style></style>
+  <h1>TBP {{ term }} Tutoring Schedule</h1>
+  {% if not display %}
+    <p>Check back later!</p>
+  {% else %}
+    <div class="row">
+      <div class="col-lg-2">
+        <div class="panel-group" id="accordion">
+          {% for item in classes %}
+            <div class="panel panel-default">
+              <div class="panel-heading">
+                <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion" href="#{{ item.2 }}">
+                  {{ item.0 }}
+                </a>
+              </div>
+              <div id="{{ item.2 }}" class="panel-collapse collapse">
+                <div class="panel-body">
+                  {% for class in item.1 %}
+                    <a href="#" class="{{ class.1 }}" onmouseover="highlight('{{ class.1 }}')" onmouseout="unhighlight('{{ class.1 }}')" onclick="return locklight('{{ class.1 }}')">{{ class.0 }}</a>{% if not forloop.last %},{% endif %}
+                  {% endfor %}
+                </div>
+              </div>
+            </div>
+          {% endfor %}
         </div>
       </div>
-      {% endfor %}
-    </div>
-  </div>
-  <div class="col-lg-9">
-    <table class="table table-striped">
-      <tbody>
-        <tr>
-          <th>Hours</th>
-          <th>Monday</th>
-          <th>Tuesday</th>
-          <th>Wednesday</th>
-          <th>Thursday</th>
-          <th>Friday</th>
-        </tr>
-        {% for item in tutors %}
-        <tr>
-          <td>{{ item.0 }}</td>
-          {% for tutors in item.1 %}
-          <td>
-            {% for tutor in tutors %}
-            <p id="{{ forloop.parentloop.parentloop.counter }}-{{ forloop.parentloop.counter }}-{{ forloop.counter }}" class="{{ tutor.get_class_ids }}" data-title="{{ tutor }}{% if tutor.name %} (UPE){% endif %}" data-content="{{ tutor.get_day_1_display }} {{ tutor.get_hour_1_display }}, {{ tutor.get_day_2_display }} {{ tutor.get_hour_2_display }}<br>{{ tutor.display_classes }}" data-trigger="hover" data-html="true" data-placement="left">{{ tutor }}</p>
-            <script>
-                $(function(){
-                    $( "#{{ forloop.parentloop.parentloop.counter }}-{{ forloop.parentloop.counter }}-{{ forloop.counter }}" ).popover();
-                });
-            </script>
-            {% endfor %}
-          </td>
+      <div class="col-lg-10">
+        <table class="table table-striped">
+          <tbody>
+          <tr>
+            <th>Hours</th>
+            <th>Monday</th>
+            <th>Tuesday</th>
+            <th>Wednesday</th>
+            <th>Thursday</th>
+            <th>Friday</th>
+          </tr>
+          {% for item in tutors %}
+            <tr>
+              <td>{{ item.0 }}</td>
+              {% for tutors in item.1 %}
+                <td>
+                  {% for tutor in tutors %}
+                    <p id="{{ forloop.parentloop.parentloop.counter }}-{{ forloop.parentloop.counter }}-{{ forloop.counter }}" class="{{ tutor.get_class_ids }}" data-title="{{ tutor }}{% if tutor.name %} (UPE){% endif %}" data-content="{{ tutor.get_day_1_display }} {{ tutor.get_hour_1_display }}, {{ tutor.get_day_2_display }} {{ tutor.get_hour_2_display }}<br>{{ tutor.display_classes }}" data-trigger="hover" data-html="true" data-placement="left">{{ tutor }}</p>
+                    <script>
+                      $(function(){
+                        $( "#{{ forloop.parentloop.parentloop.counter }}-{{ forloop.parentloop.counter }}-{{ forloop.counter }}" ).popover();
+                      });
+                    </script>
+                  {% endfor %}
+                </td>
+              {% endfor %}
+            </tr>
           {% endfor %}
-        </tr>
-        {% endfor %}
-      </tbody>
-    </table>
-  </div>
-</div>
-
+          </tbody>
+        </table>
+      </div>
+    </div>
+  {% endif %}
 {% endblock %}
