Fixed repeated input name

--- a/templates/add.html
+++ b/templates/add.html
@@ -25,7 +25,7 @@
       <p class="help-block">Examples:</p>
       <fieldset>
         <div class="form-group">
-          <select name="dept" class="form-control">
+          <select class="form-control">
             <option value="BE">BE</option>
             <option value="CEE">CEE</option>
             <option value="CHEM">CHEM</option>
@@ -48,7 +48,7 @@
       </fieldset>
       <fieldset>
         <div class="form-group">
-          <select name="dept" class="form-control">
+          <select class="form-control">
             <option value="BE">BE</option>
             <option value="CEE">CEE</option>
             <option value="CHEM">CHEM</option>
@@ -71,7 +71,7 @@
       </fieldset>
       <fieldset>
         <div class="form-group">
-          <select name="dept" class="form-control">
+          <select class="form-control">
             <option value="BE">BE</option>
             <option value="CEE">CEE</option>
             <option value="CHEM">CHEM</option>
