--- a/templates/profile.html
+++ b/templates/profile.html
@@ -38,7 +38,7 @@
           </div>
         </div>
         <div class="form-group">
-          <label class="col-lg-4 control-label">Classes</label>
+          <label class="col-lg-4 control-label">Tutoring Classes</label>
           <div class="col-lg-8">
             <ul class="list-unstyled">
               {% for class in profile.classes.all %}
