--- a/templates/add.html
+++ b/templates/add.html
@@ -20,7 +20,7 @@
         <div class="form-group">
           <input type="text" class="form-control" name="cnum" required>
         </div>
-        <button type="submit" class="btn btn-default">Add</button>
+        <button type="submit" class="btn btn-default" name="add">Add</button>
       </fieldset>
       <p class="help-block">Tip: You can add multiple classes at once.</p>
       <p class="help-block">Examples:</p>
@@ -107,7 +107,7 @@
         </div>
         {% endfor %}
       </ul>
-      <button type="submit" class="btn btn-default">Remove</button>
+      <button type="submit" class="btn btn-default" name="remove">Remove</button>
     </form>
   </div>
 </div>
