Fixed tutoring display

--- a/templates/schedule.html
+++ b/templates/schedule.html
@@ -3,6 +3,14 @@
 {% block title %}TBP {{ term }} Tutoring Schedule{% endblock %}
 
 {% block content %}
+  <style>
+    p {
+      margin: 0;
+    }
+    .panel-heading, .panel-body {
+      padding: 5px;
+    }
+  </style>
   <script src="/static/js/application.js" type="text/javascript"></script>
   <script src="/static/js/tutor.js" type="text/javascript"></script><style></style>
   <h1>TBP {{ term }} Tutoring Schedule</h1>
